src/parser/SkeletonLanguageParser.java
package parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SkeletonLanguageParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__6=1, T__5=2, T__4=3, T__3=4, T__2=5, T__1=6, T__0=7, TK_PRINT=8, TK_PRINTLN=9, 
		TK_READ=10, TK_TIPO_INT=11, TK_TIPO_FLOAT=12, TK_VOID=13, TK_IF=14, TK_ELSE=15, 
		TK_RETURN=16, MUL=17, DIV=18, ADD=19, SUB=20, SIGNO=21, TK_CTE_INT=22, 
		TK_CTE_FLOAT=23, TK_ID=24, WS=25;
	public static final String[] tokenNames = {
		"<INVALID>", "'{'", "')'", "','", "'('", "'='", "'}'", "';'", "TK_PRINT", 
		"TK_PRINTLN", "TK_READ", "TK_TIPO_INT", "TK_TIPO_FLOAT", "TK_VOID", "TK_IF", 
		"TK_ELSE", "TK_RETURN", "'*'", "'/'", "'+'", "'-'", "SIGNO", "TK_CTE_INT", 
		"TK_CTE_FLOAT", "TK_ID", "WS"
	};
	public static final int
		RULE_start = 0, RULE_attributes = 1, RULE_methods = 2, RULE_tipoRet = 3, 
		RULE_arg = 4, RULE_sent = 5, RULE_sentAsig = 6, RULE_sentSalida = 7, RULE_sentIf = 8, 
		RULE_sentReturn = 9, RULE_localDclVar = 10, RULE_block = 11, RULE_callMethod = 12, 
		RULE_callMethodSent = 13, RULE_exp = 14, RULE_cte = 15, RULE_tipo = 16;
	public static final String[] ruleNames = {
		"start", "attributes", "methods", "tipoRet", "arg", "sent", "sentAsig", 
		"sentSalida", "sentIf", "sentReturn", "localDclVar", "block", "callMethod", 
		"callMethodSent", "exp", "cte", "tipo"
	};

	@Override
	public String getGrammarFileName() { return "SkeletonLanguage.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SkeletonLanguageParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StartContext extends ParserRuleContext {
		public List<AttributesContext> attributes() {
			return getRuleContexts(AttributesContext.class);
		}
		public List<MethodsContext> methods() {
			return getRuleContexts(MethodsContext.class);
		}
		public AttributesContext attributes(int i) {
			return getRuleContext(AttributesContext.class,i);
		}
		public MethodsContext methods(int i) {
			return getRuleContext(MethodsContext.class,i);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SkeletonLanguageVisitor ) return ((SkeletonLanguageVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(37);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(34); attributes();
					}
					} 
				}
				setState(39);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(41); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(40); methods();
				}
				}
				setState(43); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TK_TIPO_INT) | (1L << TK_TIPO_FLOAT) | (1L << TK_VOID))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttributesContext extends ParserRuleContext {
		public TerminalNode TK_ID() { return getToken(SkeletonLanguageParser.TK_ID, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public AttributesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attributes; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SkeletonLanguageVisitor ) return ((SkeletonLanguageVisitor<? extends T>)visitor).visitAttributes(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AttributesContext attributes() throws RecognitionException {
		AttributesContext _localctx = new AttributesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_attributes);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45); tipo();
			setState(46); match(TK_ID);
			setState(47); match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodsContext extends ParserRuleContext {
		public TipoRetContext tipoRet() {
			return getRuleContext(TipoRetContext.class,0);
		}
		public List<ArgContext> arg() {
			return getRuleContexts(ArgContext.class);
		}
		public TerminalNode TK_ID() { return getToken(SkeletonLanguageParser.TK_ID, 0); }
		public SentContext sent(int i) {
			return getRuleContext(SentContext.class,i);
		}
		public List<SentContext> sent() {
			return getRuleContexts(SentContext.class);
		}
		public ArgContext arg(int i) {
			return getRuleContext(ArgContext.class,i);
		}
		public MethodsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methods; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SkeletonLanguageVisitor ) return ((SkeletonLanguageVisitor<? extends T>)visitor).visitMethods(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MethodsContext methods() throws RecognitionException {
		MethodsContext _localctx = new MethodsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_methods);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49); tipoRet();
			setState(50); match(TK_ID);
			setState(51); match(T__3);
			setState(60);
			_la = _input.LA(1);
			if (_la==TK_TIPO_INT || _la==TK_TIPO_FLOAT) {
				{
				setState(52); arg();
				setState(57);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__4) {
					{
					{
					setState(53); match(T__4);
					setState(54); arg();
					}
					}
					setState(59);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(62); match(T__5);
			setState(63); match(T__6);
			setState(67);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__6) | (1L << TK_PRINT) | (1L << TK_PRINTLN) | (1L << TK_TIPO_INT) | (1L << TK_TIPO_FLOAT) | (1L << TK_IF) | (1L << TK_RETURN) | (1L << TK_ID))) != 0)) {
				{
				{
				setState(64); sent();
				}
				}
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(70); match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TipoRetContext extends ParserRuleContext {
		public TerminalNode TK_VOID() { return getToken(SkeletonLanguageParser.TK_VOID, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TipoRetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipoRet; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SkeletonLanguageVisitor ) return ((SkeletonLanguageVisitor<? extends T>)visitor).visitTipoRet(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TipoRetContext tipoRet() throws RecognitionException {
		TipoRetContext _localctx = new TipoRetContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_tipoRet);
		try {
			setState(74);
			switch (_input.LA(1)) {
			case TK_VOID:
				enterOuterAlt(_localctx, 1);
				{
				setState(72); match(TK_VOID);
				}
				break;
			case TK_TIPO_INT:
			case TK_TIPO_FLOAT:
				enterOuterAlt(_localctx, 2);
				{
				setState(73); tipo();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgContext extends ParserRuleContext {
		public TerminalNode TK_ID() { return getToken(SkeletonLanguageParser.TK_ID, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public ArgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arg; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SkeletonLanguageVisitor ) return ((SkeletonLanguageVisitor<? extends T>)visitor).visitArg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgContext arg() throws RecognitionException {
		ArgContext _localctx = new ArgContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_arg);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76); tipo();
			setState(77); match(TK_ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentContext extends ParserRuleContext {
		public LocalDclVarContext localDclVar() {
			return getRuleContext(LocalDclVarContext.class,0);
		}
		public SentIfContext sentIf() {
			return getRuleContext(SentIfContext.class,0);
		}
		public SentSalidaContext sentSalida() {
			return getRuleContext(SentSalidaContext.class,0);
		}
		public CallMethodSentContext callMethodSent() {
			return getRuleContext(CallMethodSentContext.class,0);
		}
		public SentAsigContext sentAsig() {
			return getRuleContext(SentAsigContext.class,0);
		}
		public SentReturnContext sentReturn() {
			return getRuleContext(SentReturnContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public SentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sent; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SkeletonLanguageVisitor ) return ((SkeletonLanguageVisitor<? extends T>)visitor).visitSent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentContext sent() throws RecognitionException {
		SentContext _localctx = new SentContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_sent);
		try {
			setState(86);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(79); block();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(80); sentAsig();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(81); sentSalida();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(82); sentIf();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(83); sentReturn();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(84); localDclVar();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(85); callMethodSent();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentAsigContext extends ParserRuleContext {
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public TerminalNode TK_ID() { return getToken(SkeletonLanguageParser.TK_ID, 0); }
		public SentAsigContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentAsig; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SkeletonLanguageVisitor ) return ((SkeletonLanguageVisitor<? extends T>)visitor).visitSentAsig(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentAsigContext sentAsig() throws RecognitionException {
		SentAsigContext _localctx = new SentAsigContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_sentAsig);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88); match(TK_ID);
			setState(89); match(T__2);
			setState(90); exp(0);
			setState(91); match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentSalidaContext extends ParserRuleContext {
		public TerminalNode TK_PRINTLN() { return getToken(SkeletonLanguageParser.TK_PRINTLN, 0); }
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public TerminalNode TK_PRINT() { return getToken(SkeletonLanguageParser.TK_PRINT, 0); }
		public SentSalidaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentSalida; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SkeletonLanguageVisitor ) return ((SkeletonLanguageVisitor<? extends T>)visitor).visitSentSalida(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentSalidaContext sentSalida() throws RecognitionException {
		SentSalidaContext _localctx = new SentSalidaContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_sentSalida);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			_la = _input.LA(1);
			if ( !(_la==TK_PRINT || _la==TK_PRINTLN) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(94); match(T__3);
			setState(95); exp(0);
			setState(100);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__4) {
				{
				{
				setState(96); match(T__4);
				setState(97); exp(0);
				}
				}
				setState(102);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(103); match(T__5);
			setState(104); match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentIfContext extends ParserRuleContext {
		public TerminalNode TK_IF() { return getToken(SkeletonLanguageParser.TK_IF, 0); }
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public SentContext sent(int i) {
			return getRuleContext(SentContext.class,i);
		}
		public TerminalNode TK_ELSE() { return getToken(SkeletonLanguageParser.TK_ELSE, 0); }
		public List<SentContext> sent() {
			return getRuleContexts(SentContext.class);
		}
		public SentIfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentIf; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SkeletonLanguageVisitor ) return ((SkeletonLanguageVisitor<? extends T>)visitor).visitSentIf(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentIfContext sentIf() throws RecognitionException {
		SentIfContext _localctx = new SentIfContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_sentIf);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106); match(TK_IF);
			setState(107); match(T__3);
			setState(108); exp(0);
			setState(109); match(T__5);
			setState(110); sent();
			setState(113);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(111); match(TK_ELSE);
				setState(112); sent();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentReturnContext extends ParserRuleContext {
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public TerminalNode TK_RETURN() { return getToken(SkeletonLanguageParser.TK_RETURN, 0); }
		public SentReturnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentReturn; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SkeletonLanguageVisitor ) return ((SkeletonLanguageVisitor<? extends T>)visitor).visitSentReturn(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentReturnContext sentReturn() throws RecognitionException {
		SentReturnContext _localctx = new SentReturnContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_sentReturn);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115); match(TK_RETURN);
			setState(117);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << TK_CTE_INT) | (1L << TK_CTE_FLOAT) | (1L << TK_ID))) != 0)) {
				{
				setState(116); exp(0);
				}
			}

			setState(119); match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LocalDclVarContext extends ParserRuleContext {
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public TerminalNode TK_ID() { return getToken(SkeletonLanguageParser.TK_ID, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public LocalDclVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_localDclVar; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SkeletonLanguageVisitor ) return ((SkeletonLanguageVisitor<? extends T>)visitor).visitLocalDclVar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LocalDclVarContext localDclVar() throws RecognitionException {
		LocalDclVarContext _localctx = new LocalDclVarContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_localDclVar);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121); tipo();
			setState(122); match(TK_ID);
			setState(125);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(123); match(T__2);
				setState(124); exp(0);
				}
			}

			setState(127); match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public SentContext sent(int i) {
			return getRuleContext(SentContext.class,i);
		}
		public List<SentContext> sent() {
			return getRuleContexts(SentContext.class);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SkeletonLanguageVisitor ) return ((SkeletonLanguageVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129); match(T__6);
			setState(133);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__6) | (1L << TK_PRINT) | (1L << TK_PRINTLN) | (1L << TK_TIPO_INT) | (1L << TK_TIPO_FLOAT) | (1L << TK_IF) | (1L << TK_RETURN) | (1L << TK_ID))) != 0)) {
				{
				{
				setState(130); sent();
				}
				}
				setState(135);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(136); match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CallMethodContext extends ParserRuleContext {
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public TerminalNode TK_ID() { return getToken(SkeletonLanguageParser.TK_ID, 0); }
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public CallMethodContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_callMethod; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SkeletonLanguageVisitor ) return ((SkeletonLanguageVisitor<? extends T>)visitor).visitCallMethod(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CallMethodContext callMethod() throws RecognitionException {
		CallMethodContext _localctx = new CallMethodContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_callMethod);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138); match(TK_ID);
			setState(139); match(T__3);
			setState(148);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << TK_CTE_INT) | (1L << TK_CTE_FLOAT) | (1L << TK_ID))) != 0)) {
				{
				setState(140); exp(0);
				setState(145);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__4) {
					{
					{
					setState(141); match(T__4);
					setState(142); exp(0);
					}
					}
					setState(147);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(150); match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CallMethodSentContext extends ParserRuleContext {
		public CallMethodContext callMethod() {
			return getRuleContext(CallMethodContext.class,0);
		}
		public CallMethodSentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_callMethodSent; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SkeletonLanguageVisitor ) return ((SkeletonLanguageVisitor<? extends T>)visitor).visitCallMethodSent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CallMethodSentContext callMethodSent() throws RecognitionException {
		CallMethodSentContext _localctx = new CallMethodSentContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_callMethodSent);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152); callMethod();
			setState(153); match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpContext extends ParserRuleContext {
		public ExpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exp; }
	 
		public ExpContext() { }
		public void copyFrom(ExpContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ExpMulDivContext extends ExpContext {
		public Token op;
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public ExpMulDivContext(ExpContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SkeletonLanguageVisitor ) return ((SkeletonLanguageVisitor<? extends T>)visitor).visitExpMulDiv(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ExpAddSubContext extends ExpContext {
		public Token op;
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public ExpAddSubContext(ExpContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SkeletonLanguageVisitor ) return ((SkeletonLanguageVisitor<? extends T>)visitor).visitExpAddSub(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ExpIDContext extends ExpContext {
		public TerminalNode TK_ID() { return getToken(SkeletonLanguageParser.TK_ID, 0); }
		public ExpIDContext(ExpContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SkeletonLanguageVisitor ) return ((SkeletonLanguageVisitor<? extends T>)visitor).visitExpID(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ExpCallMethodContext extends ExpContext {
		public CallMethodContext callMethod() {
			return getRuleContext(CallMethodContext.class,0);
		}
		public ExpCallMethodContext(ExpContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SkeletonLanguageVisitor ) return ((SkeletonLanguageVisitor<? extends T>)visitor).visitExpCallMethod(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ExpParentContext extends ExpContext {
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public ExpParentContext(ExpContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SkeletonLanguageVisitor ) return ((SkeletonLanguageVisitor<? extends T>)visitor).visitExpParent(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ExpCteContext extends ExpContext {
		public CteContext cte() {
			return getRuleContext(CteContext.class,0);
		}
		public ExpCteContext(ExpContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SkeletonLanguageVisitor ) return ((SkeletonLanguageVisitor<? extends T>)visitor).visitExpCte(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpContext exp() throws RecognitionException {
		return exp(0);
	}
